--- a/css/style.css
+++ b/css/style.css
@@ -121,12 +121,44 @@ footer
   opacity: 20%;
 
 }
+.MY_card img
+{
+    width: 200px;
+	  height: 300px;
+    border-radius: 10px;
+	object-fit:cover;
+  object-position:top;
+
+
+}
+.MY_card
+{
+    background-color:#5271ff ;
+    position: relative;
+    height: 300px;
+    width: 200px;
+    border-radius: 10px;
+}
 .MYtext
 {
     padding: 15px;
     color: #fff;
     position: absolute;
     bottom:0%;
+}
+.MY_text
+{
+  width: 100%;
+  height: 75px;
+    padding: 15px;
+    font-size: 20px;
+    color: #fff;
+    position: absolute;
+    bottom:0%;
+    background-color: #5272ff81;
+    border-bottom-right-radius: 10px;
+    border-bottom-left-radius: 10px;
+
 }
 .My {
   margin-bottom: 0;
