--- a/css/style.css
+++ b/css/style.css
@@ -149,7 +149,7 @@ footer
 .MY_text
 {
   width: 100%;
-  height: 75px;
+  height: 100px;
     padding: 15px;
     font-size: 20px;
     color: #fff;
@@ -158,6 +158,8 @@ footer
     background-color: #5272ff81;
     border-bottom-right-radius: 10px;
     border-bottom-left-radius: 10px;
+    margin-bottom: 0;
+    line-height: 1;
 
 }
 .My {
