--- a/css/style.css
+++ b/css/style.css
@@ -215,3 +215,12 @@ footer
 .col.cards{
   min-width: 300px;
 }
+.map{
+  margin-top: 20px;
+  width: 300px;
+  height: 300px;
+}
+.col.form
+{
+  max-width: 400px;
+}
