--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 */
 @font-face {
   font-family: Marmelad;
-  src:   url("/font/Marmelad-Regular.ttf");
+  src:   url("font/Marmelad-Regular.ttf");
   font-weight: normal;
   font-style: normal;
   font-style: bold;
@@ -19,7 +19,7 @@ body{
 }
 .mainfoto
 {
-  background-image: linear-gradient(to top, transparent 60%, #872434),url(/img/216A9855.jpg);
+  background-image: linear-gradient(to top, transparent 60%, #872434),url(img/216A9855.jpg);
   background-size: cover;
   background-position: center;
   width: 100%;
