--- a/css/style.css
+++ b/css/style.css
@@ -221,53 +221,37 @@ footer
 	vertical-align:bottom;
   font-size: 20px;
 }
-/*
-.mpcard
+/*Персональная страница*/
+.fperson
 {
-  width: 200px;
+  min-width: 200px;
   height: 300px;
+  background-color: #872434;
+}
+/*ФИО*/
+.hperson{
+  width: 500px;
+  height: 80px;
   background-color: #872434;
   margin: 20px;
   padding: 0px;
   color: #fff;
 }
-.mpcard1
+.hperson1
 {
-  width: 200px;
-  height: 300px;
-  background-color: transparent;
-  margin-top: 10px;
-  margin-left: 10px;
-  color: #fff;
-  opacity: 0.8;
-  bottom:0%;
-  object-fit: cover;
-  object-position: center;
-}
-.mpcard2
-{
-  width: 200px;
-  height: 300px;
   position: absolute;
-  margin-top: 10px;
-  margin-left: 10px;
-  color: #fff;
   background-color: #8C8D8E;
-}
-.mppcard2
-{
-  position: absolute;
-  top: 35%;
-  color: #fff;
-}
-.mptcard1
-{
-  width: 200px;
+  width: 500px;
   height: 80px;
-  position: absolute;
-  margin-top: -80px;
+  margin-top: 10px;
   margin-left: 10px;
+  border: #8C8D8E solid 1px;
   color: #fff;
-  padding: 10px;
-  align-content: center;
-}*/
+}
+.hpersonp
+{
+  color: #fff;
+  margin: 0;
+  line-height: 80px;
+  font-size: 30px;
+}
