--- a/css/style.css
+++ b/css/style.css
@@ -214,15 +214,16 @@ footer
 } */
 .mpcard3 
 {
+  padding: 10px;
   position:relative;
   margin-top: 230px;
   margin-left: 10px;
   bottom: 0%;
   width: 200px;
   height: 70px;
-  font-size: 16px;
   color: #fff;
   overflow: hidden;
+  font-size: 15px;
 }
 .mpcard3:hover{
   margin-top: 10px;
@@ -231,10 +232,10 @@ footer
 }
 .mpcard3 p{
   margin-top: 200px;
-  padding: 10px;
   display:table-cell!important;
 	vertical-align:bottom;
-  font-size: 20px;
+  font-weight: bold;
+  font-size: 18px;
 } 
 /*Персональная страница*/
 .fperson
