--- a/css/style.css
+++ b/css/style.css
@@ -241,7 +241,7 @@ footer
 /*Фото*/
 .fpers{
   min-width: 200px;
-  height: 80vh;
+  height: 90vh;
   background-color: #111C24;
   position: relative;
   margin: 20px 30px 20px 20px;
@@ -314,7 +314,6 @@ footer
   margin-top: 20px;
   padding: 10px;
   width: 100%;
-  height: 100px;
   background-color: #8C8D8E;
   position: relative;
   display: table;
@@ -357,4 +356,13 @@ footer
   font-size: 15px;
   padding: 0px;
   margin-bottom: 20px;
+}
+/* О нас */
+.bckabout{
+  padding: 10px;
+  margin: 10px;
+  min-width: 300px;
+  height: auto;
+  background-color: #8C8D8E;
+  color: #fff;
 }
